added my name to indexhtml

--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,12 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<h1>this is a header</h1>
-=======
-<<<<<<< HEAD
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Practice</title>
 </head>
 <body>
-	Helllllloooooooooo!!!!!
+	<h1>this is a header</h1>
+	<p>Peter wrote this</p>
+	<p>Helllllloooooooooo!!!!!</p>
 </body>
 </html>
-=======
-<!DOCTYPE html>
->>>>>>> d10619a707bff405132965074497964646d4d8fa
->>>>>>> 6fbd8f95d03c4fb015317cb47dc7a4d376873c7d
