--- a/client/index.html
+++ b/client/index.html
@@ -12,5 +12,7 @@
 	<p>Helllllloooooooooo!!!!!</p>
 
 	<h6>PETER KRIEG</h6>
+
+	<p>This is peter krieg.  will the merge work??!</p>
 </body>
 </html>
