added h2 to index

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 	<title>Practice</title>
 </head>
 <body>
+	<h2>Ping pong!!!!!</h2>
     <h1>This is Kyle. What's up guys?</h1>
 	<h1>git hub sucks</h1>
 	<h1>this is a header</h1>
